--- a/src/components/InventoryConfirmation.css
+++ b/src/components/InventoryConfirmation.css
@@ -1,4 +1,3 @@
-export default `
 /* Basic Setup */
 html,
 body {
@@ -188,4 +187,4 @@ p {
 }
 .page-super-dense .table td {
 	line-height: 1.1; /* More compact line-height for super-dense mode */
-} ` as string
+}
